--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
             <!-- Programas -->
             <div class="drawer-group">
                 <div class="drawer-group-label">Programas</div>
-                <a href="keola.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">KE</div>Cardápio</a>
-                <a href="zao.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">ZA</div>Cursos</a>
-                <a href="chat.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">CH</div>Chat Assistente</a>
+                <a href="keola.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">KE</div>Cardápio Keola</a>
+                <a href="zao.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">ZA</div>Cursos ZAO</a>
+                <a href="chat.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">CH</div>Chat Assistente Virtual</a>
             </div>
 
             <!-- Pessoas -->
@@ -191,7 +191,7 @@
             <div class="drawer-group">
                 <div class="drawer-group-label">Administração</div>
                 <a href="dizimos.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">DZ</div>Dízimos</a>
-                <a href="admin.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">AD</div>Cadastros</a>
+                <a href="admin.html"   class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">AG</div>Acesso Geral</a>
             </div>
 
         </nav>
@@ -244,7 +244,12 @@
                 <div class="icon-wrap ic-gold"></div>
                 <span class="label">PDV</span>
             </a>
-            
+
+            <a href="kds.html" target="_blank" class="btn-icon">
+                <div class="icon-wrap ic-gold"></div>
+                <span class="label">KDS</span>
+            </a>
+
             <a href="chat.html" class="btn-icon btn-icon--wide">
                 <div class="icon-wrap ic-gold"></div>
                 <span class="label">Chat<br>Assistente Virtual Zion Lisboa</span>
@@ -273,40 +278,40 @@
 </div>
 
 <script>
-// ── DRAWER ─────────────────────────────────────────────────
-function toggleDrawer() {
-    const open = document.getElementById('drawer').classList.toggle('open');
-    document.getElementById('drawerOverlay').classList.toggle('open', open);
-    document.getElementById('hamburger').classList.toggle('open', open);
-}
-function closeDrawer() {
-    document.getElementById('drawer').classList.remove('open');
-    document.getElementById('drawerOverlay').classList.remove('open');
-    document.getElementById('hamburger').classList.remove('open');
-}
-document.addEventListener('keydown', e => { if (e.key === 'Escape') closeDrawer(); });
+    // ── DRAWER ─────────────────────────────────────────────────
+    function toggleDrawer() {
+        const open = document.getElementById('drawer').classList.toggle('open');
+        document.getElementById('drawerOverlay').classList.toggle('open', open);
+        document.getElementById('hamburger').classList.toggle('open', open);
+    }
+    function closeDrawer() {
+        document.getElementById('drawer').classList.remove('open');
+        document.getElementById('drawerOverlay').classList.remove('open');
+        document.getElementById('hamburger').classList.remove('open');
+    }
+    document.addEventListener('keydown', e => { if (e.key === 'Escape') closeDrawer(); });
 
-// ── Botões grid — iniciais ─────────────────────────────────
-document.querySelectorAll('.btn-icon').forEach(btn => {
-    const label = btn.querySelector('.label').innerText.replace(/\n/g, ' ').trim();
-    const words = label.split(' ').filter(w => w.length > 2);
-    let initials = words.length === 1 ? words[0].substring(0,2) : words[0][0] + words[1][0];
-    btn.querySelector('.icon-wrap').textContent = initials.toUpperCase();
-});
+    // ── Botões grid — iniciais ─────────────────────────────────
+    document.querySelectorAll('.btn-icon').forEach(btn => {
+        const label = btn.querySelector('.label').innerText.replace(/\n/g, ' ').trim();
+        const words = label.split(' ').filter(w => w.length > 2);
+        let initials = words.length === 1 ? words[0].substring(0,2) : words[0][0] + words[1][0];
+        btn.querySelector('.icon-wrap').textContent = initials.toUpperCase();
+    });
 
-// ── AUTH ────────────────────────────────────────────────────
-function renderAuth() {
-    const user       = ZionAuth.getUser();
-    const authBar    = document.getElementById('auth-bar');
-    const drawerAuth = document.getElementById('drawer-auth');
-    const tipoLabel  = { visitante: 'Visitante', membro: 'Membro', admin: 'Administrador' };
+    // ── AUTH ────────────────────────────────────────────────────
+    function renderAuth() {
+        const user       = ZionAuth.getUser();
+        const authBar    = document.getElementById('auth-bar');
+        const drawerAuth = document.getElementById('drawer-auth');
+        const tipoLabel  = { visitante: 'Visitante', membro: 'Membro', admin: 'Administrador' };
 
-    if (user) {
-        const initials  = (user.nome || 'U').split(' ').map(w => w[0]).slice(0,2).join('').toUpperCase();
-        const firstName = (user.nome || 'Utilizador').split(' ')[0];
+        if (user) {
+            const initials  = (user.nome || 'U').split(' ').map(w => w[0]).slice(0,2).join('').toUpperCase();
+            const firstName = (user.nome || 'Utilizador').split(' ')[0];
 
-        // Banner: avatar + nome + botão sair
-        authBar.innerHTML = `
+            // Banner: avatar + nome + botão sair
+            authBar.innerHTML = `
         <div class="auth-user">
             <div class="auth-avatar">${initials}</div>
             <span class="auth-name">${firstName}</span>
@@ -320,8 +325,8 @@ function renderAuth() {
             Sair
         </button>`;
 
-        // Drawer: avatar + nome completo + tipo + botão sair
-        drawerAuth.innerHTML = `
+            // Drawer: avatar + nome completo + tipo + botão sair
+            drawerAuth.innerHTML = `
         <div class="drawer-auth-logado">
             <div class="drawer-auth-avatar">${initials}</div>
             <div class="drawer-auth-info">
@@ -331,9 +336,9 @@ function renderAuth() {
             <button class="drawer-auth-sair" onclick="ZionAuth.logout()">Sair</button>
         </div>`;
 
-    } else {
-        // Banner: botão entrar
-        authBar.innerHTML = `
+        } else {
+            // Banner: botão entrar
+            authBar.innerHTML = `
         <a href="login.html" class="auth-login">
             <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
@@ -343,8 +348,8 @@ function renderAuth() {
             Entrar
         </a>`;
 
-        // Drawer: botão entrar/registar
-        drawerAuth.innerHTML = `
+            // Drawer: botão entrar/registar
+            drawerAuth.innerHTML = `
         <a href="login.html" class="drawer-auth-login" onclick="closeDrawer()">
             <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
@@ -353,10 +358,10 @@ function renderAuth() {
             </svg>
             Entrar / Registar
         </a>`;
+        }
     }
-}
 
-renderAuth();
+    renderAuth();
 </script>
 </body>
 </html>
